@@ -1,3 +1,8 @@
+Mon Feb 14 23:10:21 HKT 2005 William Brack <wbrack@mmm.com.hk>
+
+	* libxslt/namespaces.c: fixed a problem with
+	  exclude-result-prefixes (bug 165560)
+
 Mon Feb 14 12:51:07 CET 2005 Daniel Veillard <daniel@veillard.com>
 
 	* libxslt/variables.c: added a cretion of ctxt->globalVars in
